--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 					<ul class="nav1">
 						<li><a href="index.html">&nbsp;&nbsp;首&nbsp;&nbsp;页&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="magazine.html">&nbsp;&nbsp;资&nbsp;&nbsp;讯&nbsp;&nbsp;</a>
+						<li><a href="news_list.html">&nbsp;&nbsp;资&nbsp;&nbsp;讯&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="strange-buildings.html">&nbsp;&nbsp;影&nbsp;&nbsp;展&nbsp;&nbsp;</a>
+						<li><a href="img_list.html">&nbsp;&nbsp;影&nbsp;&nbsp;展&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="404.html">&nbsp;&nbsp;投&nbsp;&nbsp;稿&nbsp;&nbsp;</a>
+						<li><a href="tougao.html">&nbsp;&nbsp;投&nbsp;&nbsp;稿&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="blog.html">&nbsp;&nbsp;视&nbsp;&nbsp;频&nbsp;&nbsp;</a>
+						<li><a href="img_list.html">&nbsp;&nbsp;视&nbsp;&nbsp;频&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="news.html">&nbsp;&nbsp;活&nbsp;&nbsp;动&nbsp;&nbsp;</a>
+						<li><a href="activiyu_list.html">&nbsp;&nbsp;活&nbsp;&nbsp;动&nbsp;&nbsp;</a>
 						</li>
 					</ul>
 					<!-- script-for-menu -->
