--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
+		<meta http-equiv="X-UA-Compatible" content="IE=9" />
+	
 		<script type="application/x-javascript">
 			addEventListener("load", function() {
 				setTimeout(hideURLbar, 0);
@@ -17,6 +20,12 @@
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="css/style.css" rel='stylesheet' type='text/css' />
 		<script src="js/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js" ></script>
+			<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+  <script src="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
+  <script src="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 		<script type="text/javascript" src="js/move-top.js"></script>
 		<script type="text/javascript" src="js/easing.js"></script>
 		<script type="text/javascript">
@@ -86,7 +95,8 @@
 				</div>
 				<div class="clearfix"> </div>
 				<!--登陆处理的JS-->
-				<script defer="defer" type="text/javascript" src="js/loginfn.js">	</script>
+				<script defer="defer" type="text/javascript" src="js/loginfn.js">
+				</script>
 
 			</div>
 			<div class="header-info-right">
@@ -143,7 +153,7 @@
 		<!--login-->
 		<script type="text/javascript" src="js/bootstrapValidator.js"></script>
 		<div class="r-l-box hidden">
-			<div class="register-box " >
+			<div class="register-box ">
 				<div class="blank-30"></div>
 				<form class="form-horizontal" method="post" id="registerForm" action="#">
 					<div class="form-group">
@@ -264,7 +274,6 @@
 						}
 					}
 				});
-				
 			});
 		</script>
 		<!--//login-->
@@ -873,7 +882,7 @@
 			<div class="container">
 				<div class="footer-top">
 					<div class="col-md-6 footer-left">
-						<p> 
+						<p>
 							中国摄影圈汇集国内知名摄影爱好者是摄影爱好者的天堂
 						</p>
 					</div>
