--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 				<div class="header cbp-spmenu-push">
 					<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 						<a href="index.html">HOME / 首 页 </a>
-						<a href="magazine.html">NEWS / 资 讯</a>
-						<a href="strange-buildings.html">SHOW / 影 展</a>
-						<a href="404.html">VIDEO / 视 频</a>
-						<a href="blog.html">ACTIVITY / 活 动 </a>
-						<a href="news.html">JOIN / 投 稿 </a>
+						<a href="news_list.html">NEWS / 资 讯</a>
+						<a href="img_list.html">SHOW / 影 展</a>
+						<a href="img_list.html">VIDEO / 视 频</a>
+						<a href="activiyu_list.html">ACTIVITY / 活 动 </a>
+						<a href="tougao.html">JOIN / 投 稿 </a>
 					</nav>
 					<!--script-nav -->
 					<script>
