--- a/tougao.html
+++ b/tougao.html
@@ -53,15 +53,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="nav1">
 						<li><a href="index.html">&nbsp;&nbsp;首&nbsp;&nbsp;页&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="magazine.html">&nbsp;&nbsp;资&nbsp;&nbsp;讯&nbsp;&nbsp;</a>
+						<li><a href="news_list.html">&nbsp;&nbsp;资&nbsp;&nbsp;讯&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="strange-buildings.html">&nbsp;&nbsp;影&nbsp;&nbsp;展&nbsp;&nbsp;</a>
+						<li><a href="img_list.html">&nbsp;&nbsp;影&nbsp;&nbsp;展&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="404.html">&nbsp;&nbsp;投&nbsp;&nbsp;稿&nbsp;&nbsp;</a>
+						<li><a href="tougao.html">&nbsp;&nbsp;投&nbsp;&nbsp;稿&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="blog.html">&nbsp;&nbsp;视&nbsp;&nbsp;频&nbsp;&nbsp;</a>
+						<li><a href="img_list.html">&nbsp;&nbsp;视&nbsp;&nbsp;频&nbsp;&nbsp;</a>
 						</li>
-						<li><a href="news.html">&nbsp;&nbsp;活&nbsp;&nbsp;动&nbsp;&nbsp;</a>
+						<li><a href="activiyu_list.html">&nbsp;&nbsp;活&nbsp;&nbsp;动&nbsp;&nbsp;</a>
 						</li>
 					</ul>
 					<!-- script-for-menu -->
@@ -99,13 +99,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="header-info-right">
 				<div class="header cbp-spmenu-push">
-					<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+				<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 						<a href="index.html">HOME / 首 页 </a>
-						<a href="magazine.html">NEWS / 资 讯</a>
-						<a href="strange-buildings.html">SHOW / 影 展</a>
-						<a href="404.html">VIDEO / 视 频</a>
-						<a href="blog.html">ACTIVITY / 活 动 </a>
-						<a href="news.html">JOIN / 投 稿 </a>
+						<a href="news_list.html">NEWS / 资 讯</a>
+						<a href="img_list.html">SHOW / 影 展</a>
+						<a href="img_list.html">VIDEO / 视 频</a>
+						<a href="activiyu_list.html">ACTIVITY / 活 动 </a>
+						<a href="tougao.html">JOIN / 投 稿 </a>
 					</nav>
 					<!--script-nav -->
 					<script>
