--- a/index.html
+++ b/index.html
@@ -270,6 +270,24 @@
 						}
 					}
 				});
+				$('#loginForm').bootstrapValidator({
+					fields: {
+						username: {
+							validators: {
+								notEmpty: {
+									message: '用户名不能为空'
+								}
+							}
+						},
+						password: {
+							validators: {
+								notEmpty: {
+									message: '密码不能为空'
+								},
+							}
+						}
+					}
+				});
 				$('#register_Btn').click(function() {
 					$.ajax({
 						type: "get",
@@ -303,6 +321,9 @@
 						 password:$("#loginForm input[name='password']").val()
 						},
 						async:true,
+						beforeSend:function(){
+						$('#loginForm').bootstrapValidator('validate')	
+						},
 						success:function(data){
 							if(data==true){
 								alert(登陆成功)
