--- a/tougao.html
+++ b/tougao.html
@@ -293,40 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</form>
 					</div>
 				</div>
-				<script>
-					$('#upimgbtn').click(function() {
-						$('#upfile_input').click()
-					})
-					 $('#upfile_input').change(function() {
-						var imgsrc = $(this).val();
-						var sp_arr = imgsrc.split('.');
-						var endmark = sp_arr[sp_arr.length - 1];
-						if (!/(gif|jpg|jpeg|png|GIF|JPG|PNG)$/.test(endmark)) {
-							alert("请上传图片格式文件")
-						} else {
-							$.ajax({
-								type: "get",
-								url: "",
-								data: imgsrc,
-								async: true,
-								success: function(data) {
-									if (data == "success") {
-										var dataurl = "images/art-6.jpg";
-										var img = document.createElement('img')
-										img.src = dataurl
-										img.onload = function() {
-											var html = ''
-											html += '<div class="col-md-3 related-left"><div class="portfolio app mix_all" data-cat="app" style="display:inline-block;opacity:1"><div class="portfolio-wrapper">'
-											html += ' <a href=' + dataurl + ' class="b-link-stripe b-animate-go swipebox" title="Image Title"><img src=' + dataurl + '>'
-											html += '<div class="b-wrapper"><h2 class="b-animate b-from-left b-delay03"><span class="one"></span></h2></div></a></div></div></div>'
-											$('#myupload_list').prepend(html)
-										}
-									}
-								}
-							});
-						}
-					})
-				</script>
+
 				<div class="related">
 					<h3>&nbsp;&nbsp; UPLOAD /我的上传</h3>
 					<div class="related-bottom my_upload" id="myupload_list">
@@ -337,14 +304,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<img src="images/art-2.jpg" />
 										<div class="b-wrapper">
 											<h2 class="b-animate b-from-left    b-delay03 ">
-
 								     	            <span class="one"></span>
-
-								                 	</h2>
+								            </h2>
 										</div>
 									</a>
 								</div>
 							</div>
+							<a href="javascript:void(0)" class="delate_a" data_id="1">删除图片</a>
 						</div>
 						<div class="col-md-3 related-left">
 							<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
@@ -361,6 +327,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 							</div>
+							<a href="javascript:void(0)" class="delate_a" data_id="2">删除图片</a>
 						</div>
 						<div class="col-md-3 related-left">
 							<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
@@ -376,6 +343,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 							</div>
+							<a href="javascript:void(0)" class="delate_a" data_id="3">删除图片</a>
 						</div>
 						<div class="col-md-3 related-left">
 							<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
@@ -392,6 +360,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 							</div>
+							<a href="javascript:void(0)" class="delate_a" data_id="4">删除图片</a>
 						</div>
 						<div class="col-md-3 related-left">
 							<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
@@ -408,10 +377,64 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 							</div>
+							<a href="javascript:void(0)" class="delate_a" data_id="5">删除图片</a>
 						</div>
 
 						<div class="clear"></div>
 					</div>
+					<script>
+						$('#upimgbtn').click(function() {
+							$('#upfile_input').click()
+						})
+						 $('#upfile_input').change(function() {
+							var imgsrc = $(this).val();
+							var sp_arr = imgsrc.split('.');
+							var endmark = sp_arr[sp_arr.length - 1];
+							if (!/(gif|jpg|jpeg|png|GIF|JPG|PNG)$/.test(endmark)) {
+								alert("请上传图片格式文件")
+							} else {
+								$.ajax({
+									type: "get",
+									url: "",
+									data: imgsrc,
+									async: true,
+									success: function(data) {
+										if (data == "success") {
+											var dataurl = "images/art-6.jpg";
+											var img = document.createElement('img')
+											img.src = dataurl
+											img.onload = function() {
+												var html = ''
+												html += '<div class="col-md-3 related-left"><div class="portfolio app mix_all" data-cat="app" style="display:inline-block;opacity:1"><div class="portfolio-wrapper">'
+												html += ' <a href=' + dataurl + ' class="b-link-stripe b-animate-go swipebox" title="Image Title"><img src=' + dataurl + '>'
+												html += '<div class="b-wrapper"><h2 class="b-animate b-from-left b-delay03"><span class="one"></span></h2></div></a></div></div>'
+												html += '<a href="javascript:void(0)" class="delate_a" data_id="' + data_id + '">删除图片</a>'
+												$('#myupload_list').prepend(html)
+											}
+										}
+									}
+								});
+							}
+						})
+						 $(document).on('click', 'a.delate_a', function() {
+							var _this=$(this);
+							$.ajax({
+								type: "get",
+								url: "",
+								data: $(this).attr('data_id'),
+								async: true,
+								success: function(data) {
+									if(data=='success'){
+										_this.parents('.related-left').remove()
+									}
+								},
+								error:function(){
+									alert("删除失败")
+								}
+							});
+						})
+					</script>
+
 					<!--articles-->
 					<link rel="stylesheet" href="css/swipebox.css">
 					<script src="js/jquery.swipebox.min.js"></script>
